--- a/src/components/QuizTopic/QuizTopic.css
+++ b/src/components/QuizTopic/QuizTopic.css
@@ -1,23 +1,34 @@
 .quiz-topic {
     background-color: #06283D;
+    border-radius: 10px;
     margin: 20px;
     width: 200px;
     padding: 15px;
+    box-shadow: rgba(3, 102, 214, 0.3) 0px 0px 0px 5px;
     transition: 0.5s ease;
+
 }
 
 .quiz-topic:hover {
-    background-color: #0d3d5c;
+    background-color: #0068a5;
 }
 
 .quiz-topic h2,
 h4 {
     color: white;
+
+
 }
 
 .quiz-topic img {
     width: 100px;
     margin-top: 10px;
+}
+
+.quiz-topic a {
+    text-decoration: none;
+    color: white;
+
 }
 
 .btn-test {
@@ -30,4 +41,8 @@ h4 {
     padding: 5px 10px;
     width: 100%;
     cursor: pointer;
+}
+
+.btn-test:hover {
+    background-color: #ff2216;
 }
