--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,6 +10,8 @@
 .nav-link a:hover {
     background-color: #393E46;
     border-radius: 10px;
+    box-shadow: rgba(3, 102, 214, 0.3) 0px 0px 0px 5px;
+
 
 }
 
