--- a/src/components/Question/Question.css
+++ b/src/components/Question/Question.css
@@ -3,15 +3,18 @@
     margin: 50px auto;
     width: 80%;
     border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 5px;
 
 }
+
 
 .quiz-question {
     text-align: left;
     padding-left: 10%;
     color: blueviolet;
     background-color: #ffa927;
-    line-height: 3;
+    line-height: 2;
+    width: 70%;
 }
 
 .qus-eye {
