--- a/src/components/Question/Question.css
+++ b/src/components/Question/Question.css
@@ -29,3 +29,10 @@
     margin-left: 25%;
     padding-bottom: 30px;
 }
+
+.eye {
+    color: brown;
+    font-size: 20px;
+    margin-right: 20px;
+
+}
