--- a/src/components/Question/Question.css
+++ b/src/components/Question/Question.css
@@ -31,8 +31,13 @@
 }
 
 .eye {
-    color: brown;
+    color: green;
+    border: 0;
+    border-radius: 5px;
+    margin-top: 15px;
+    font-weight: bold;
     font-size: 20px;
     margin-right: 20px;
+    cursor: pointer;
 
 }
