--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -7,3 +7,12 @@
     width: 50%;
     margin: 10px auto;
 }
+
+@media only screen and (max-width: 768px) {
+    .quiz-container {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        width: 100%;
+        margin: 0;
+    }
+}
