--- a/src/components/Question/Question.css
+++ b/src/components/Question/Question.css
@@ -41,3 +41,26 @@
     cursor: pointer;
 
 }
+
+@media only screen and (max-width: 768px) {
+    .options {
+        grid-template-columns: repeat(1, 1fr);
+        width: 100%;
+        margin: 0;
+        padding-bottom: 30px;
+    }
+
+    .qus-eye {
+        display: block;
+        justify-content: space-between;
+    }
+
+    .quiz-question {
+        padding: 0;
+        color: blueviolet;
+        background-color: #ffa927;
+        line-height: 2;
+        width: 100%;
+    }
+
+}
